# backup

./: README.md  install.sh  pyproject.toml  uninstall.sh
docs/superpowers/plans/: 2026-06-28-backup-cli.md  2026-06-29-backupignore.md  2026-06-29-integrity-verification.md  2026-07-01-fanout-backups.md
docs/superpowers/specs/: 2026-06-28-backup-design.md  2026-06-29-backupignore-design.md  2026-06-29-default-dest-design.md  2026-06-29-integrity-verification-design.md  2026-06-29-run-all-design.md  2026-06-29-schema-migration-design.md  2026-07-01-fanout-backups-design.md
src/backup/: __init__.py  cli.py  db.py  integrity.py  paths.py  runner.py  schedule.py  units.py
tests/: conftest.py  test_cli.py  test_db.py  test_integrity.py  test_paths.py  test_runner.py  test_schedule.py  test_units.py
